--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <body>
     <div id="header">
       <h1>Broadway Design</h1>
-      <div id="nav">
-        
-      </div>
+        <h4><a href="#header">Home</a></h4>
+        <h4><a href="#about">About</a></h4>
+        <h4><a href="#work">Work</a></h4>
+        <h4><a href="#team">Team</a></h4>
+        <h4><a href="#contact">Contact</a></h4>
     </div>
 
   </body>
