--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <div id="header">
       <h1>Broadway Design</h1>
         <h4><a href="#header">Home</a></h4>
-        <h4><a href="#about">About</a></h4>
+        <h4><a href="#">About</a></h4>
         <h4><a href="#work">Work</a></h4>
-        <h4><a href="#team">Team</a></h4>
+        <h4><a href="#">Team</a></h4>
         <h4><a href="#contact">Contact</a></h4>
+    </div>
+
+    <div id="work">
+      <h2>Our Process</h2>
     </div>
 
   </body>
