--- a/index.html
+++ b/index.html
@@ -9,14 +9,38 @@
     <div id="header">
       <h1>Broadway Design</h1>
         <h4><a href="#header">Home</a></h4>
-        <h4><a href="#">About</a></h4>
+        <h4><a href="#nav">About</a></h4>
         <h4><a href="#work">Work</a></h4>
-        <h4><a href="#">Team</a></h4>
+        <h4><a href="#banner">Team</a></h4>
         <h4><a href="#contact">Contact</a></h4>
     </div>
 
     <div id="work">
       <h2>Our Process</h2>
+      <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="identify image"></p>
+      <h3>Identify<h3>
+      <p>We focus on the most important details.</p>
+      <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="understand image"></p>
+      <h3>Understand<h3>
+      <p>We study our projects inside and out.</p>
+      <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="execute image"></p>
+      <h3>Execute<h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+
+    <div id="banner">
+      <h3>Designed in New York</h3>
+    </div>
+
+    <div id="contact">
+      <h3>Portfolio</h3>
+      <p>Coming soon.</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+      <h3>Contact</h3>
+      <p>Phone: (555) 555-5555</p>
+      <p>Email: test@example.com</p>
+      <p>Twitter: @test</p>
     </div>
 
   </body>
