--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="header">
       <h1>Broadway Design</h1>
         <h4><a href="#header">Home</a></h4>
-        <h4><a href="#nav">About</a></h4>
+        <h4><a href="#footer">About</a></h4>
         <h4><a href="#work">Work</a></h4>
         <h4><a href="#banner">Team</a></h4>
         <h4><a href="#contact">Contact</a></h4>
@@ -41,6 +41,14 @@
       <p>Phone: (555) 555-5555</p>
       <p>Email: test@example.com</p>
       <p>Twitter: @test</p>
+    </div>
+
+    <div id="footer">
+      <p> © Broadway 2016 <a href="#header">Home</a>
+      <a href="#footer">About</a>
+      <a href="#work">Work</a>
+      <a href="#banner">Team</a>
+      <a href="#contact">Contact</a><p>
     </div>
 
   </body>
